# EdmontonLens

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  data_refresh.yml  deploy.yml  keep_alive.yml
appscript/: bigquery_daily_logger.gs
backend/: config.py  database.py  main.py
backend/agent/: __init__.py  langchain_agent.py  prompts.py
backend/agent/tools/: __init__.py  bigquery_tool.py  schema_tool.py
backend/etl/: pipeline.py
backend/etl/extractors/: __init__.py  arcgis.py  edmonton_open_data.py  gtfs.py
backend/etl/loaders/: __init__.py  bigquery.py  local_db.py  mysql_loader.py  sqlserver_loader.py
backend/etl/transformers/: __init__.py  (+5 more)
backend/ml/: delay_predictor.py
backend/models/: __init__.py  neighbourhoods.py  parks.py  transit.py  waste.py
backend/routers/: __init__.py  agent.py  neighbourhoods.py  parks.py  transit.py  waste.py
backend/tests/: test_agent.py  test_api.py  test_etl.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentChat.tsx  DelayBarChart.tsx  LoadingState.tsx  MLPredictionBadge.tsx  Navigation.tsx  NeighbourhoodMap.tsx  NeighbourhoodSnapshot.tsx  TransitPulseChart.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
looker_studio/: README.md
powerbi/: README.md
scripts/: db_health_check.ps1  db_health_check.sh
tableau/: README.md  transit_pulse_schema.tds
(+12 files in other folders)
